DEC-30: refactor code with sonarlint