@@ -1,17 +1,14 @@
 package net.dg.newsscrapingapi.config;
 
-import java.util.Arrays;
+import java.util.List;
 import net.dg.newsscrapingapi.auth.APIAuthKeyFilter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.AuthenticationException;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -19,6 +16,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @Configuration
 @EnableWebSecurity
 public class ApiSecurityConfig extends WebSecurityConfigurerAdapter {
+
   @Value("${api.http.auth-token-header-name}")
   private String principalRequestHeader;
 
@@ -29,18 +27,14 @@ public class ApiSecurityConfig extends WebSecurityConfigurerAdapter {
   protected void configure(HttpSecurity httpSecurity) throws Exception {
     APIAuthKeyFilter filter = new APIAuthKeyFilter(principalRequestHeader);
     filter.setAuthenticationManager(
-        new AuthenticationManager() {
-          @Override
-          public Authentication authenticate(Authentication authentication)
-              throws AuthenticationException {
-            String principal = (String) authentication.getPrincipal();
-            if (!principalRequestValue.equals(principal)) {
-              throw new BadCredentialsException(
-                  "The API key was not found or not the expected value.");
-            }
-            authentication.setAuthenticated(true);
-            return authentication;
+        authentication -> {
+          String principal = (String) authentication.getPrincipal();
+          if (!principalRequestValue.equals(principal)) {
+            throw new BadCredentialsException(
+                "The API key was not found or not the expected value.");
           }
+          authentication.setAuthenticated(true);
+          return authentication;
         });
     httpSecurity
         .antMatcher("/api/**")
@@ -55,8 +49,8 @@ public class ApiSecurityConfig extends WebSecurityConfigurerAdapter {
   @Bean
   CorsConfigurationSource corsConfigurationSource() {
     CorsConfiguration configuration = new CorsConfiguration();
-    configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
-    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE"));
+    configuration.setAllowedOrigins(List.of("http://localhost:3000"));
+    configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
     configuration.setAllowCredentials(true);
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", configuration);
